349769454: (fix) update size on the empty reports page to prevent overlapping (#557)

--- a/modules/ui/src/app/pages/reports/reports.component.scss
+++ b/modules/ui/src/app/pages/reports/reports.component.scss
@@ -127,6 +127,10 @@
   grid-row: 1/3;
 }
 
+.results-content-empty {
+  height: 100%;
+}
+
 .results-content-empty-message {
   display: flex;
   flex-direction: column;
